erDiagram
    UTILISATEUR {
        int id_utilisateur PK
        varchar nom
        varchar prenom
        varchar email
        varchar mot_de_passe_hash
        enum role
        datetime date_inscription
        varchar photo_profil
        boolean actif
    }
    RESERVATION {
        int id_reservation PK
        int id_utilisateur FK
        int id_destination FK
        int id_hebergement FK
        int id_transport FK
        varchar reference
        enum statut
        decimal montant_total
        date date_depart
        date date_retour
        int nb_voyageurs
        datetime date_reservation
    }
    PAIEMENT {
        int id_paiement PK
        int id_reservation FK
        enum mode
        decimal montant
        enum statut
        datetime date_paiement
        varchar reference_externe
    }
    RESERVATION_ACTIVITES {
        int id PK
        int reservation_id FK
        int activite_id FK
        int nb_places
    }
    ACTIVITE {
        int id_activite PK
        varchar nom
        decimal prix_par_personne
        int places_restantes
    }

    UTILISATEUR ||--o{ RESERVATION : "effectue (1,N)"
    RESERVATION ||--|| PAIEMENT : "donne lieu a (1,1)"
    RESERVATION ||--o{ RESERVATION_ACTIVITES : "inclut (1,N)"
    ACTIVITE ||--o{ RESERVATION_ACTIVITES : "est reservee (1,N)"
